--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,17 @@
 Source: wildfly
 Maintainer: Cory Wright <cwright@iland.com>
+Homepage: http://www.wildfly.org/
+Bugs: https://issues.jboss.org/browse/WFLY
+Section: java
+Priority: optional
 Standards-Version: 3.9.5
 Build-Depends: debhelper (>=9)
 
 Package: wildfly
+Section: java
+Priority: optional
 Architecture: all
+Homepage: https://github.com/ilanddev/wildfly-debian
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Wildfly Application Server
  WildFly is a flexible, lightweight, managed application runtime that helps
