--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Section: java
 Priority: optional
 Architecture: all
 Homepage: https://github.com/ilanddev/wildfly-debian
-Depends: oracle-java8-installer | java8-runtime, ${misc:Depends}
+Depends: openjdk-8-jre-headless | java8-runtime, adduser, ${misc:Depends}
 Description: Wildfly Application Server
  WildFly is a flexible, lightweight, managed application runtime that helps
  you build amazing applications.
